<resources>
    <string name="app_name">GreeNews</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="splash">Splash!</string>
    <string name="e_mail">E_mail</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a new account.</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_into_your_account">Log into your account.</string>
    <string name="homepage">HomePage</string>
    <string name="title_activity_drawer_home">DrawerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="favorito">Favorito</string>
    <string name="posts">Posts</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="message">Message</string>
    <string name="likes">Likes</string>
</resources>
