<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_favorito"
            android:icon="@drawable/favorito"
            android:title="@string/favorito" />
        <item
            android:id="@+id/nav_posts"
            android:icon="@drawable/post"
            android:title="@string/posts" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_helpCenter"
            android:icon="@drawable/help"
            android:title="@string/help_center" />

    </group>



</menu>
