<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A9494"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="324dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtEmali"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/txt_shape"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/txtPsw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/txt_shape"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="#eeeeee"
            android:text="@string/login"
            android:textColor="#4a9494" />

        <Button
            android:id="@+id/btnSitch2Register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#4a9494"
            android:text="@string/create_a_new_account"
            android:textColor="#fff" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>