<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#4a9494"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            
            <ImageView
                android:src="@drawable/back"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="onClickBack"/>
            
            <TextView

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="inherit"
                android:textColor="#fff"
                android:textSize="32sp"
                android:text="@string/Profile" />


        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/nav_header_desc"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@drawable/profile"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/nav_header_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#4a9494" />

                <TextView
                    android:id="@+id/textUserMail"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_subtitle"
                    android:textColor="#4a9494" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:onClick="onClickMsg"
                android:text="@string/message"/>

            <Button
                android:id="@+id/btnLikes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:onClick="onClickLike"
                android:text="@string/likes"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frameProfile">
            <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="cn.edu.cqu.greenewsbeta01.FragMessage"></fragment>
        </FrameLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>